infrastructure/k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onho-dev
  labels:
    name: onho-dev
    env: dev
    istio-injection: enabled
