infrastructure/k8s/dev/backend.pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: onho-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        env: dev
        app: backend
    spec:
      restartPolicy: Always
      containers:
      - name: backend
        image: acronhosbx.azurecr.io/onho:0.15
        args: [backend]
        ports:
        - containerPort: 8086
        readinessProbe:
          httpGet:
            path: /health
            port: 8086
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 20
        livenessProbe:
          httpGet:
            path: /health
            port: 8086
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 20
