infrastructure/k8s/dev/frontend.pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: onho-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        env: dev
        app: frontend
    spec:
      restartPolicy: Always
      containers:
      - name: frontend
        image: acronhosbx.azurecr.io/frontend:0.12
        args: [frontend]
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 20
        #Kubernetes uses liveness probes to know when to restart a container.
        #If a container is unresponsive—perhaps the application is deadlocked due to a
        #multi-threading defect—restarting the container can make the application more available, despite the defect.
        #It certainly beats paging someone in the middle of the night to restart a container
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 20
          timeoutSeconds: 5
          periodSeconds: 20
