infrastructure/k8s/dev/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: onho-dev
spec:
  selector:
    app: backend
  ports:
    - port: 8086
      protocol: TCP
      targetPort: 8086
      name: client
  type: NodePort
