infrastructure/k8s/dev/frontend.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: onho-dev
spec:
  selector:
    app: frontend
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
      name: client
  type: NodePort
