infrastructure/k8s/dev/backend.gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend-gateway
  namespace: onho-dev
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "api.onho.cz"
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "api.onho.cz"
#      tls:
#        httpsRedirect: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: onho-dev
spec:
  hosts:
    - "api.onho.cz"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            prefix: /
        - uri:
            prefix: /health
      route:
        - destination:
            port:
              number: 8086
            host: backend
      maxAge: "86400s"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
  namespace: onho-dev
spec:
  host: backend
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 15s
        tcpKeepalive:
          time: 7200s
          interval: 75s
  spec:
    exportTo:
      - '*'
    host: backend
    trafficPolicy:
      tls:
        mode: DISABLE
