infrastructure/k8s/dev/frontend.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: frontend-ingress
  namespace: onho-dev
spec:
  rules:
    - host: onho.cz
      http:
        paths:
          - path: /test
            backend:
              serviceName: frontend
              servicePort: 8081
          - path: /
            backend:
              serviceName: frontend
              servicePort: 8081
          - path: /health
            backend:
              serviceName: frontend
              servicePort: 8081
