infrastructure/k8s/dev/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: onho-dev
  labels:
    app: frontend
spec:
  ports:
    - name: http
      port: 8001
      targetPort: 8081
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: onho-dev
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      serviceAccountName: frontend-identity
      restartPolicy: Always
      containers:
        - name: frontend
          image: acronhosbx.azurecr.io/onho:0.23
          args: [frontend]
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 20
        #Kubernetes uses liveness probes to know when to restart a container.
        #If a container is unresponsive—perhaps the application is deadlocked due to a
        #multi-threading defect—restarting the container can make the application more available, despite the defect.
        #It certainly beats paging someone in the middle of the night to restart a container
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: onho-dev
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
      - "onho.cz"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: onho-dev
spec:
  hosts:
      - "onho.cz"
  gateways:
      - frontend-gateway
  http:
    - match:
      - uri:
          prefix: /health
      - uri:
          prefix: /
      - uri:
          prefix: /status
      - uri:
          prefix: /delay
      route:
      - destination:
          port:
            number: 8001
          host: frontend
---
